# LLC-update-tool

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile  readme.md
.github/workflows/: rust.yml
.trae/rules/: git-commit-message.md
src/: cli.rs  conf.rs  config.rs  fs.rs  lang.rs  llc.rs  lock.rs  main.rs  path.rs  setting.rs  steam.rs
wix/: main.wxs
