[package]
name = "llc"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
log = "0.4"
env_logger = "0.11"
keyvalues-parser = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
octocrab = "0.49.7"
tokio = { version = "1.52.1", features = [
	"rt-multi-thread",
	"macros",
	"net",
	"time",
] }
url = "2.5.8"
inquire = { version = "0.9.4", features = ["experimental-multiline-input"] }
reqwest = { version = "0.13.2", features = ["stream"] }
futures-util = "0.3.32"
rustls = { version = "0.23", features = ["ring"] }
sevenz-rust = "0.6"
zip = "8.5"
indicatif = "0.18.4"
fs_extra = "1.3.0"
