[package]
name = "llc-updater"
version = "0.1.4"
edition = "2024"
authors = ["s0me0neee"]
repository = "https://github.com/s0me0neee/LLC-update-tool"
description = "A CLI tool to update and install Limbus Company zh-CN translations."
license = "MIT"
readme = "README.md"
keywords = ["cli"]
exclude = ["CLAUDE.md", "test/"]

[[bin]]
name = "llc"
path = "src/main.rs"


[package.metadata.wix]
upgrade-guid = "144F7910-213E-4613-B213-B37CF62353E8"
path-guid = "10274E55-8C43-4CB5-94C3-6DF9460906B4"
license = false
eula = false

[dependencies]
dirs = "6.0.0"
log = "0.4"
env_logger = "0.11"
keyvalues-parser = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
octocrab = "0.49.8"
tokio = { version = "1.52.1", features = [
	"rt-multi-thread",
	"macros",
	"net",
	"time",
] }
url = "2.5.8"
inquire = { version = "0.9.4", features = ["experimental-multiline-input"] }
reqwest = { version = "0.13.2", features = ["stream"] }
futures-util = "0.3.32"
rustls = { version = "0.23.39", features = ["ring"] }
sevenz-rust = "0.6"
zip = "8.6"
indicatif = "0.18.4"
fs_extra = "1.3.0"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = "0.4.44"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
